Issue #738: modifying css for page background color.

--- a/core/themes/seven/css/seven.base.css
+++ b/core/themes/seven/css/seven.base.css
@@ -3,7 +3,7 @@
  */
 body {
   color: #000;
-  background: #fff;
+  background: #fafafa;
   font: normal 16px/1.538 "Open Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 }
 a,
